# tm-fastapi-messenger

./: .gitignore  README.md  docker-compose.yml  dockerfile  justfile  pyproject.toml
app/: __main__.py  asgi.py  dependencies.py  exceptions.py  helpers.py
app/config/: base.py  consts.py  plugins.py
app/database/migrations/: alembic.ini  env.py
app/database/models/: __init__.py  chat.py  chat_group.py  chat_group_participants.py  chat_message.py  tokens.py  user.py
app/domain/: consts.py  protocols.py
app/domain/accounts/: guards.py  schemas.py  services.py
app/domain/base/: schemas.py
app/domain/chats/: services.py
app/lib/: auth_strategies.py  cache.py  health.py  jwt.py  password_hasher.py  security.py  strategies.py  upcast_env.py  websockets.py
app/lib/utils/: logging.py  upcast_env.py
app/router/: __init__.py  accounts.py  chat.py  support.py  urls.py  users.py
app/server/: lifespan.py  plugins.py
app/templates/: layout.html  navbar.html
snippets/: python.json
src/app/: helpers.py  main.py
src/app/config/: __init__.py  base.py
src/app/domain/: protocols.py
src/app/lib/: cache.py  security.py  strategies.py
src/app/router/: __init__.py  accounts.py  chat.py  users.py
src/app/server/: plugins.py
src/jwt_auth/: exceptions.py
tests/: conftest.py  data_fixtures.py  hypothesis_fixtures.py  user_fixtures.py
tests/functional/: conftest.py  test_jwt_authentication.py  test_websockets_facilities.py
tests/integration/: conftest.py  test_app_auth.py  test_app_authentication.py  test_authentication.py  test_database.py  test_services.py
tests/unit/: test_auth_adapter.py  test_jwt_token.py  test_password_hasher.py  test_signature.py
tooling/: certificate.py  healthcheck.py  setup_db.py
(+2 files in other folders)
