[project]
name = "fastapi-messenger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15.2",
  "fastapi[standard]>=0.115.12",
  "jwt>=1.3.1",
  "minio>=7.2.15",
  "psycopg>=3.2.7",
  "saq[postgres,web]>=0.24.5",
  "sqlalchemy>=2.0.40",
  "advanced-alchemy[fastapi]>=1.4.2",
  "psycopg2>=2.9.10",
  "msgspec>=0.19.0",
  "pyjwt[crypto]>=2.10.1",
  "asyncpg>=0.30.0",
  "python-jose>=3.4.0",
  "jinja2>=3.1.6",
  "passlib[bcrypt]>=1.7.4",
  "fastapi-keycloak-middleware>=1.2.0",
  "authlib>=1.6.0",
  "anyio>=4.9.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
]
test = [
  "faker>=37.3.0",
  "hypothesis>=6.131.21",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-databases[postgres]>=0.12.3",
]


[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
